--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     defaultConfig {
         applicationId "com.yifan.androidutils"
         minSdkVersion 17
-        targetSdkVersion 22
+        targetSdkVersion 17
         versionCode 1
         versionName "1.0"
     }
@@ -23,5 +23,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:recyclerview-v7:22.2.1'
     compile files('libs/tsmclientsdk.jar')
 }
